# crypto-bot

./: .env.example  Dockerfile  adicionar_novos_pares.txt  docker-compose.yml  main.py  pyproject.toml  tree.txt
config/: btc.env  pairs.yml
scripts/: generate_compose.py
src/core/: exchange_conn.py  manage_orders.py  settings.py  state_chief.py
src/utils/: ccxt_decorators.py  logger.py  market_hours.py
tests/: 1_test_settings.ipynb  2_test_exchange_conn.ipynb  3_test_cache_engine.ipynb  4_test_ManageOrders.ipynb  5_test_MarketHoursChecker.ipynb  test_market_hours.py
